language/move-lang/tests/move_check/borrows/mutate_full_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/mutate_full_invalid.move:13:9
   │
12 │         let f = x;
   │                 - It is still being mutably borrowed by this reference
13 │         *x = 0;
   │         ^^^^^^ Invalid mutation of reference.

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/mutate_full_invalid.move:18:9
   │
17 │         let f = freeze(x);
   │                 --------- It is still being borrowed by this reference
18 │         *x = 0;
   │         ^^^^^^ Invalid mutation of reference.

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/mutate_full_invalid.move:23:9
   │
22 │         let f = id(x);
   │                 ----- It is still being borrowed by this reference
23 │         *x = 0;
   │         ^^^^^^ Invalid mutation of reference.

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/mutate_full_invalid.move:28:9
   │
27 │         let f = id_mut(x);
   │                 --------- It is still being mutably borrowed by this reference
28 │         *x = 0;
   │         ^^^^^^ Invalid mutation of reference.

